MonetDB/src/mal/Tests/tst106.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## check in-compatible polmorphic types
#
#command f(a:any::1,b:any::2, c:any::1) :bat[any::1,any::2] = f;
!ERROR: address of function 'f' not found
command Admin.f(a:any::1,b:any::2,c:any::1):bat[any::1,any::2] = f;	#0 polymorphic:(f:bat[any::1,any::2]->0)(a:any::1->1)(b:any::2->2)(c:any::1->3)
#
#b:= f(1,2,"help");
#a:= f(1,2,1);
#
function Admin.main():int;	#0:(main:int->0)
	b := f(1,2,"help");	#1 unknown:(b:any->1)($2:int->2)($3:int->3)($4:str->4)
	a := Admin.f(1,2,1);	#2:(a:bat[int,int]->5)($2:int->2)($3:int->3)($2:int->2)
end function;	#3:
!ERROR: MALexception:Admin.main[1]:Instruction type not fixed
>